refactor(lab01_jvm): 优化内存溢出演示代码
- DirectBufferOOM: 使用 ArrayList 保存 ByteBuffer 引用，防止 GC 回收
- MetaspaceOOM: 添加类引用保存逻辑，确保类不被 GC 回收
- ThreadOOM: 添加 JVM 参数说明，便于观察 OOM现象
- pom.xml: 移除 maven-compiler-plugin 配置，直接在 properties 中设置 Java 版本